--- a/html/about.html
+++ b/html/about.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-<div id="wrapper" class="container_12">
+<div id="wrapper" class="container_12 about">
 		<div id="header" class="container_12">
            <div id="logo" class="grid_6 " >
                             <img src="./images/design/logo.png"  />
