--- a/html/admin_frontpage.html
+++ b/html/admin_frontpage.html
@@ -13,15 +13,16 @@
 	<link rel="shortcut icon" href="/favicon.ico" /> 
 	<link rel="icon" href="/favicon.ico" type="image/x-icon" /> 
 	-->
-    <link rel="stylesheet" href="css/admin.css" media="screen, print, projection" />
+    <link rel="stylesheet" href="./css/admin.css" media="screen, print, projection" />
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/start/jquery-ui.css" media="screen, print, projection" />
-    <link rel="stylesheet" href="css/jquery.wekcalendar.css" media="screen, print, projection" />
-    <link rel="stylesheet" href="css/caldemo.css" media="screen, print, projection" />
+    <link rel="stylesheet" href="./css/jquery.wekcalendar.css" media="screen, print, projection" />
+    <link rel="stylesheet" href="./css/caldemo.css" media="screen, print, projection" />
 
 	<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js'></script>
 	<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js'></script>
-    <script type="text/javascript" src="js/weekcalendar.js"></script>
-    <script type="text/javascript" src="js/demo.js"></script>
+    <script type="text/javascript" src="./js/weekcalendar.js"></script>
+    <script type="text/javascript" src="./js/demo.js"></script>
+    <script type="text/javascript" src="./js/jquery.qtip-1.0.0-rc3.min.js"></script>
 	<title>getaslot.com</title>
 </head>
 
@@ -55,7 +56,6 @@
             </form>
         </div>
     	
-		
 	</div>
     
 	<div id="footer">
