--- a/html/calendar.html
+++ b/html/calendar.html
@@ -32,6 +32,38 @@
 				<div class="logo">
 					<a href="./" title="getaslot.com"><img alt="getaslot logo" src="images/design/logo.png" /></a>
 				</div>
+				<div class="topmenu">
+					<ul>
+						<li><a class="btn1" href="#" title="Dashboard"><span><span>Dashboard</span></span></a></li>
+						<li class="parent">
+							<a class="btn1" href="#" title="My Account"><span><span>My Account</span></span></a>
+							<!-- <ul class="child">
+								<li class="ctop"> <!-- ~ --> </li>
+								<li><a href="#" title="Edit company info"><span><span>Edit company info</span></span></a></li>
+								<li><a href="#" title="Manage employees"><span><span>Manage employees</span></span></a></li>
+								<li><a href="#" title="Logout"><span><span>Logout</span></span></a></li>
+								<li class="cbot"> <!-- ~ --> </li>
+							</ul> -->
+						</li>
+						<li class="parent">
+							<a class="btn2" href="#" title="Sign in"><span><span>Sign in</span></span></a>
+							<div class="signin">
+								<div class="inr">
+									<form method="post" action="#">
+										<div class="inpt">
+											<input type="text" name="user" id="user" onfocus="if(this.value=='Username') this.value='';" onblur="if(this.value=='') this.value='Username';" value="Username" />
+										</div>
+										<div class="inpt">
+											<input type="password" name="pswd" id="pswd" onfocus="if(this.value=='Password') this.value='';" onblur="if(this.value=='') this.value='Password';" value="Password" />
+										</div>
+										<a class="forgot" href="#" title="Forgot password ?">Forgot password ?</a>
+										<a class="submit" href="#" title="Sign in"><span>Sign in</span></a>
+									</form>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 		
@@ -64,7 +96,10 @@
 		</div>
 		
 		<div id="footer">
-			
+			<div class="g48">
+				<a href="http://garage48.org/en" title="garage48"><img src="images/design/garage48.png" alt="garage48 logo" /></a>
+			</div>
+			<div class="clear"></div>
 		</div>
 	</div>
 </body>
