--- a/html/startpage.html
+++ b/html/startpage.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-	<div class="bcknd">
+	<div class="home">
 		<div id="header">
 			<div class="inr">
 				<div class="logo">
@@ -34,8 +34,8 @@
 				</div>
 				<div class="topmenu">
 					<ul>
-						<li><a class="btn1" href="#" title="Dashboard"><span><span>Dashboard</span></span></a></li>
-						<li class="parent">
+						<li style="display: none;"><a class="btn1" href="#" title="Dashboard"><span><span>Dashboard</span></span></a></li>
+						<li style="display: none;" class="parent">
 							<a class="btn1" href="#" title="My Account"><span><span>My Account</span></span></a>
 							<ul class="child">
 								<li class="ctop"><span>&nbsp;</span></li>
@@ -68,31 +68,22 @@
 		</div>
 		
 		<div id="content">
-			<div id="calendar"></div>
-			<div id="event_edit_container">
-				<form>
-					<input type="hidden" />
-					<ul>
-						<li>
-							<span>Date: </span><span class="date_holder"></span> 
-						</li>
-						<li>
-							<label for="start">Start Time: </label><select name="start"><option value="">Select Start Time</option></select>
-						</li>
-						<li>
-							<label for="end">End Time: </label><select name="end"><option value="">Select End Time</option></select>
-						</li>
-						<li>
-							<label for="title">Title: </label><input type="text" name="title" />
-						</li>
-						<li>
-							<label for="body">Body: </label><textarea name="body"></textarea>
-						</li>
-					</ul>
-				</form>
+			<div class="offers">
+				<div class="offer">
+					<h1>Individuals</h1>
+					<p>
+						Find and reserve time slots for services from hair dresser
+						to dentist all from the comfort of your browser.
+					</p>
+					<a class="btn3" href="#" title="Schedule your next appointment"><span>SCHEDULE YOUR NEXT APPOINTMENT</span></a>
+				</div>
 			</div>
-			
-			
+			<div class="big_pic">
+				
+			</div>
+			<div class="desc">
+				
+			</div>
 		</div>
 		
 		<div id="footer">
