--- a/html/calendar.html
+++ b/html/calendar.html
@@ -37,7 +37,7 @@
 						<li><a class="btn1" href="#" title="Dashboard"><span><span>Dashboard</span></span></a></li>
 						<li class="parent">
 							<a class="btn1" href="#" title="My Account"><span><span>My Account</span></span></a>
-							<ul class="child">
+							<ul class="child" style="display: none;">
 								<li class="ctop"><span>&nbsp;</span></li>
 								<li><a href="#" title="Edit company info"><span><span>Edit company info</span></span></a></li>
 								<li><a href="#" title="Manage employees"><span><span>Manage employees</span></span></a></li>
@@ -68,6 +68,12 @@
 		</div>
 		
 		<div id="content">
+			<div id="employee">
+				<label>Employee:</label>
+				<div class="slct">
+					<div class="slected"></div>
+				</div>
+			</div>
 			<div id="calendar"></div>
 			<div id="event_edit_container">
 				<form>
