--- a/html/calendar.html
+++ b/html/calendar.html
@@ -68,11 +68,19 @@
 		</div>
 		
 		<div id="content">
-			<div id="employee">
+			<div class="dropdown">
 				<label>Employee:</label>
-				<div class="slct">
-					<div class="slected"></div>
-				</div>
+				<dl id="employee">
+					<dt><a href="javascript:;"><span>employee1</span></a></dt>
+					<dd>
+						<ul>
+							<li class="current"><a href="javascript:;"><span>employee1</span></a></li>
+							<li><a href="javascript:;"><span>employee2</span></a></li>
+							<li><a href="javascript:;"><span>employee3</span></a></li>
+							<li><a href="javascript:;"><span>employee4</span></a></li>
+						</ul>
+					</dd>
+				</dl>
 			</div>
 			<div id="calendar"></div>
 			<div id="event_edit_container">
