--- a/html/calendar.html
+++ b/html/calendar.html
@@ -70,17 +70,11 @@
 		<div id="content">
 			<div class="dropdown">
 				<label>Employee:</label>
-				<dl id="employee">
-					<dt><a href="javascript:;"><span>employee1</span></a></dt>
-					<dd>
-						<ul>
-							<li class="current"><a href="javascript:;"><span>employee1</span></a></li>
-							<li><a href="javascript:;"><span>employee2</span></a></li>
-							<li><a href="javascript:;"><span>employee3</span></a></li>
-							<li><a href="javascript:;"><span>employee4</span></a></li>
-						</ul>
-					</dd>
-				</dl>
+				<select name="employee">
+					<option value="opt1">opt1</option>
+					<option value="opt2">opt2</option>
+					<option value="opt3">opt3</option>
+				</select>
 			</div>
 			<div id="calendar"></div>
 			<div id="event_edit_container">
