--- a/html/startpage.html
+++ b/html/startpage.html
@@ -68,29 +68,100 @@
 		</div>
 		
 		<div id="content">
-			<div class="offers">
-				<div class="offer">
-					<h1>Individuals</h1>
-					<p>
-						Find and reserve time slots for services from hair dresser
-						to dentist all from the comfort of your browser.
-					</p>
-					<a class="btn3" href="#" title="Schedule your next appointment"><span>SCHEDULE YOUR NEXT APPOINTMENT</span></a>
+			<div class="wr1">
+				<div class="clients">
+					<div class="client">
+						<h1>Individuals</h1>
+						<p>
+							Find and reserve time slots for services from hair dresser
+							to dentist all from the comfort of your browser.
+						</p>
+						<a class="btn3" href="#" title="Schedule your next appointment"><span><span>SCHEDULE YOUR NEXT APPOINTMENT</span></span></a>
+						<div class="clear"></div>
+					</div>
+					<div class="client">
+						<h1>Companies</h1>
+						<p>
+							A cost-effective tool for streamlining scheduling workflow
+							of your service-based business. 
+						</p>
+						<a class="btn3" href="#" title="Set-up your scheduler"><span><span>SET-UP YOUR SCHEDULER</span></span></a>
+						<div class="clear"></div>
+					</div>
 				</div>
-			</div>
-			<div class="big_pic">
-				
+				<div class="big_pic">
+					<img src="images/example.jpg" alt="example" />
+					<div class="soc">
+						<a class="fc" href="http://www.facebook.com/#!/getaslot" title="facebook"></a>
+						<a class="tw" href="http://twitter.com/#!/search/getaslot" title="twitter"></a>
+						<div class="clear"></div>
+					</div>
+				</div>
+				<div class="clear"></div>
 			</div>
 			<div class="desc">
-				
+				<div class="inr">
+					<div class="offers">
+						<div class="offer">
+							<div class="oimg">
+								<img src="images/offer1.jpg" alt="Customize everything" />
+							</div>
+							<div class="otxt">
+								<h2>Customize everything</h2>
+								<p>
+									Make the functionality fit your business. 
+									Adjust business hours, time slot size etc.
+								</p>
+							</div>
+							<div class="clear"></div>
+						</div>
+						<div class="offer">
+							<div class="oimg">
+								<img src="images/offer2.jpg" alt="Per-employee management and stats" />
+							</div>
+							<div class="otxt">
+								<h2>Per-employee management and stats</h2>
+								<p>
+									Keep track of who’s occupied and when.
+								</p>
+							</div>
+							<div class="clear"></div>
+						</div>
+						<div class="offer">
+							<div class="oimg">
+								<img src="images/offer3.jpg" alt="Automated reminders" />
+							</div>
+							<div class="otxt">
+								<h2>Automated reminders</h2>
+								<p>
+									Make sure your clients show up by letting the system remind them via SMS.
+								</p>
+							</div>
+							<div class="clear"></div>
+						</div>
+						<div class="offer">
+							<div class="oimg">
+								<img src="images/offer4.jpg" alt="More to come" />
+							</div>
+							<div class="otxt">
+								<h2>More to come</h2>
+								<p>
+									A mobile app, dynamic discount system and much more.
+								</p>
+							</div>
+							<div class="clear"></div>
+						</div>
+					</div>
+					<div class="g48">
+						<a href="http://garage48.org/en" title="garage48"><img src="images/design/garage48.png" alt="garage48 logo" /></a>
+					</div>
+					<div class="clear"></div>
+				</div>
 			</div>
 		</div>
 		
 		<div id="footer">
-			<div class="g48">
-				<a href="http://garage48.org/en" title="garage48"><img src="images/design/garage48.png" alt="garage48 logo" /></a>
-			</div>
-			<div class="clear"></div>
+			
 		</div>
 	</div>
 </body>
