--- a/html/calendar.html
+++ b/html/calendar.html
@@ -68,13 +68,31 @@
 		</div>
 		
 		<div id="content">
-			<div class="dropdown">
+			<!-- <div class="dropdown">
 				<label>Employee:</label>
 				<select name="employee">
 					<option value="opt1">opt1</option>
 					<option value="opt2">opt2</option>
 					<option value="opt3">opt3</option>
 				</select>
+			</div> -->
+			<div class="infln">
+				<div class="member">
+					<div class="mpic">
+						<img src="images/member.png" alt="member img" />
+					</div>
+					<div class="mtxt">
+						<h1>Henry Pipster</h1>
+						<p>Kick-ass hair dresser</p>
+					</div>
+				</div>
+				<div class="info">
+					<div class="btn4">
+						<div>
+							<span>Click on any white cell to schedule your appointment</span>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div id="calendar"></div>
 			<div id="event_edit_container">
