footer soc icons update

--- a/html/calendar.html
+++ b/html/calendar.html
@@ -122,6 +122,11 @@
 		</div>
 		
 		<div id="footer">
+			<div class="soc">
+				<a class="fc" href="http://www.facebook.com/#!/getaslot" title="facebook"></a>
+				<a class="tw" href="http://twitter.com/#!/search/getaslot" title="twitter"></a>
+				<div class="clear"></div>
+			</div>
 			<div class="g48">
 				<a href="http://garage48.org/en" title="garage48"><img src="images/design/garage48.png" alt="garage48 logo" /></a>
 			</div>
