--- a/html/startpage.html
+++ b/html/startpage.html
@@ -117,7 +117,7 @@
 					<div class="offers">
 						<div class="offer">
 							<div class="oimg">
-								<img src="images/offer1.jpg" alt="Customize everything" />
+								<img src="images/offer1.png" alt="Customize everything" />
 							</div>
 							<div class="otxt">
 								<h2>Customize everything</h2>
@@ -130,7 +130,7 @@
 						</div>
 						<div class="offer">
 							<div class="oimg">
-								<img src="images/offer2.jpg" alt="Per-employee management and stats" />
+								<img src="images/offer2.png" alt="Per-employee management and stats" />
 							</div>
 							<div class="otxt">
 								<h2>Per-employee management and stats</h2>
@@ -142,7 +142,7 @@
 						</div>
 						<div class="offer">
 							<div class="oimg">
-								<img src="images/offer3.jpg" alt="Automated reminders" />
+								<img src="images/offer3.png" alt="Automated reminders" />
 							</div>
 							<div class="otxt">
 								<h2>Automated reminders</h2>
@@ -154,7 +154,7 @@
 						</div>
 						<div class="offer">
 							<div class="oimg">
-								<img src="images/offer4.jpg" alt="More to come" />
+								<img src="images/offer4.png" alt="More to come" />
 							</div>
 							<div class="otxt">
 								<h2>More to come</h2>
@@ -167,6 +167,10 @@
 					</div>
 					<div class="g48">
 						<a href="http://garage48.org/en" title="garage48"><img src="images/design/garage48.png" alt="garage48 logo" /></a>
+					</div>
+					<div class="clear"></div>
+					<div class="copyright">
+						<p><a href="#" title="About team">About team</a></p>
 					</div>
 					<div class="clear"></div>
 				</div>
